--- a/index.html
+++ b/index.html
@@ -19,20 +19,28 @@
     <img class="img" src="images/a.png" alt="">
     <img class="img1"src="images/f.png" alt="">
     <h3> Qui suis-je ?</h3>
-    <p class="presentation">Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod tempor incididunt ut labore et dolore. <br>  Ut enim ad minim veniam, quis nostrud exercitation ullamco  <br> laboris nisi ut aliquip ex ea commodo consequat.  <br> Duis aute irure dolor in reprehenderit in voluptate  <br> velit esse cillum dolore eu fugiat nulla pariatur. <br>  Excepteur sint occaecat cupidatat non proident, <br> sunt in culpa qui officia deserunt mollit anim <br> id est laborum.</p>
+    <p class="presentation">Je suis jeune femme de 25 ans à forts potentiels,<br>  pleine d'ambitions, de curiosité et de persévérance. <br> J'aime les challenges, aller au bout de ce que j'entreprend,<br>  et surtout progresser.<br> Passionnée par le digital et plus particulièrement <br> le développement web, je me suis spécialisée <br> depuis quelques mois maintenant en JS full stack.</p>
     <img class="icon4" src="icones/icon3.svg" alt="">
     <div class="fadeInRight">
       <img class="icon2" src="icones/icon1.svg" alt="">
       <img class="icon1" src="icones/icon.svg" alt="">
       <img class="icon3" src="icones/icon2.svg" alt="">
-    <h2 class="contact"> Contacts </h2>
-    <p class="cont">Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-    <h2 class="experiences"> Expériences </h2>
-      <p class="exp">Lorem ipsum dolor sit amet, consectetur adipisicing elit, <br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-    <h2 class="formation"> Formation </h2>
-      <p class="form">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-    <h2 class="atouts"> Atouts </h2>
-      <p class="atou">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+    <div class="bloc1">
+      <h2 class="contact"> Contacts </h2>
+      <p class="cont">Basée en Ile de France <br> 07 69 45 41 79 <br> ami.sy@hotmail.fr </p>
+    </div>
+      <div class="bloc2">
+      <h2 class="experiences"> Expériences </h2>
+      <p class="exp">Commerciale, téléopératrice, animatrice commerciale, assistante ADV, enquêtrice de terrain, <br>agent de liaison, chargée de promotion et développement, intégratrice web et enfin développeuse web, <br>mon parcours est riche d'expériences diverses et variées à l'image de ma personnalité. </p>
+    </div>
+    <div class="bloc3">
+      <h2 class="formation"> Formation </h2>
+      <p class="form"> Suite à des études universitaires dans le domaine de l'information et de la communication,<br> j'ai fait le choix de me spécialiser dans le développement web dans l'objectif de m'épanouir professionnellement <br> à travers un métier d'avenir, stimulant et porteur d'une multitude de possibilités. </p>
+      </div>
+      <div class="bloc4">
+        <h2 class="atouts"> Atouts </h2>
+      <p class="atou">Polyvalente et ouverte d'esprit, je n'aime pas l'ennui. J'aime les découvertes, tester des choses nouvelles, le dépaysement, le soleil, la nature, les voyages, la cuisine du monde...</p>
+    </div>
     </div>
     <span class="barre2"></span>
     <span class="barre3"></span>
