--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
     <div class="bloc3">
       <h2 class="formation"> Formation </h2>
-      <p class="form"> Suite à des études universitaires dans le domaine de l'information et de la communication,<br> j'ai fait le choix de me spécialiser dans le développement web dans l'objectif de m'épanouir professionnellement <br> à travers un métier d'avenir, stimulant et porteur d'une multitude de possibilités. </p>
+      <p class="form"> Suite à des études universitaires dans le domaine de l'information et de la communication,<br> j'ai fait le choix de me spécialiser dans le développement web chez Simplon.co dans l'objectif de m'épanouir professionnellement <br> à travers un métier d'avenir, jeune, stimulant et porteur d'une multitude de possibilités d'évolution. </p>
       </div>
       <div class="bloc4">
         <h2 class="atouts"> Atouts </h2>
